// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`paragraph a valid link reference 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "this is [google] link",
    "tokens": Array [
      Object {
        "raw": "this is ",
        "type": "text",
        "value": "this is ",
      },
      Object {
        "raw": "[google]",
        "tokens": Object {
          "href": "https://google.com",
          "title": Object {
            "raw": "google",
            "tokens": Array [
              Object {
                "raw": "google",
                "type": "text",
                "value": "google",
              },
            ],
          },
          "tooltip": undefined,
        },
        "type": "link",
      },
      Object {
        "raw": " link",
        "type": "text",
        "value": " link",
      },
    ],
    "type": "paragraph",
    "value": "this is [google] link",
  },
]
`;

exports[`paragraph a valid link reference with text 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "this is [toggle][google] link",
    "tokens": Array [
      Object {
        "raw": "this is ",
        "type": "text",
        "value": "this is ",
      },
      Object {
        "raw": "[toggle][google]",
        "tokens": Object {
          "href": "https://google.com",
          "title": Object {
            "raw": "toggle",
            "tokens": Array [
              Object {
                "raw": "toggle",
                "type": "text",
                "value": "toggle",
              },
            ],
          },
          "tooltip": undefined,
        },
        "type": "link",
      },
      Object {
        "raw": " link",
        "type": "text",
        "value": " link",
      },
    ],
    "type": "paragraph",
    "value": "this is [toggle][google] link",
  },
]
`;

exports[`paragraph should be deep tokenized: a ****bold**** text 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "a ****bold**** text",
    "tokens": Array [
      Object {
        "raw": "a ",
        "type": "text",
        "value": "a ",
      },
      Object {
        "raw": "****bold****",
        "tokens": Array [
          Object {
            "raw": "bold",
            "type": "text",
            "value": "bold",
          },
        ],
        "type": "bold",
      },
      Object {
        "raw": " text",
        "type": "text",
        "value": " text",
      },
    ],
    "type": "paragraph",
    "value": "a ****bold**** text",
  },
]
`;

exports[`paragraph should be deep tokenized: a **bold and *italics* text** 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "a **bold and *italics* text**",
    "tokens": Array [
      Object {
        "raw": "a ",
        "type": "text",
        "value": "a ",
      },
      Object {
        "raw": "**bold and *italics* text**",
        "tokens": Array [
          Object {
            "raw": "bold and ",
            "type": "text",
            "value": "bold and ",
          },
          Object {
            "raw": "*italics*",
            "tokens": Array [
              Object {
                "raw": "italics",
                "type": "text",
                "value": "italics",
              },
            ],
            "type": "italic",
          },
          Object {
            "raw": " text",
            "type": "text",
            "value": " text",
          },
        ],
        "type": "bold",
      },
    ],
    "type": "paragraph",
    "value": "a **bold and *italics* text**",
  },
]
`;

exports[`paragraph should be deep tokenized: a **bold** text 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "a **bold** text",
    "tokens": Array [
      Object {
        "raw": "a ",
        "type": "text",
        "value": "a ",
      },
      Object {
        "raw": "**bold**",
        "tokens": Array [
          Object {
            "raw": "bold",
            "type": "text",
            "value": "bold",
          },
        ],
        "type": "bold",
      },
      Object {
        "raw": " text",
        "type": "text",
        "value": " text",
      },
    ],
    "type": "paragraph",
    "value": "a **bold** text",
  },
]
`;

exports[`paragraph should be deep tokenized: a ~~~~strike~~~~~~~ here 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "a ~~~~strike~~~~~~~ here",
    "tokens": Array [
      Object {
        "raw": "a ",
        "type": "text",
        "value": "a ",
      },
      Object {
        "raw": "~~~~strike~~~~",
        "tokens": Array [
          Object {
            "raw": "strike",
            "type": "text",
            "value": "strike",
          },
        ],
        "type": "strike-through",
      },
      Object {
        "raw": "~~~ here",
        "type": "text",
        "value": "~~~ here",
      },
    ],
    "type": "paragraph",
    "value": "a ~~~~strike~~~~~~~ here",
  },
]
`;

exports[`paragraph should be deep tokenized: a clean [link](http://localhost 'tooltip') is here 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "a clean [link](http://localhost 'tooltip') is here",
    "tokens": Array [
      Object {
        "raw": "a clean ",
        "type": "text",
        "value": "a clean ",
      },
      Object {
        "raw": "[link](http://localhost 'tooltip')",
        "tokens": Object {
          "href": "http://localhost",
          "title": Object {
            "raw": "link",
            "tokens": Array [
              Object {
                "raw": "link",
                "type": "text",
                "value": "link",
              },
            ],
          },
          "tooltip": "tooltip",
        },
        "type": "link",
      },
      Object {
        "raw": " is here",
        "type": "text",
        "value": " is here",
      },
    ],
    "type": "paragraph",
    "value": "a clean [link](http://localhost 'tooltip') is here",
  },
]
`;

exports[`paragraph should be deep tokenized: a link [with **bold** text](https://seeme) lets see 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "a link [with **bold** text](https://seeme) lets see",
    "tokens": Array [
      Object {
        "raw": "a link ",
        "type": "text",
        "value": "a link ",
      },
      Object {
        "raw": "[with **bold** text](https://seeme)",
        "tokens": Object {
          "href": "https://seeme",
          "title": Object {
            "raw": "with **bold** text",
            "tokens": Array [
              Object {
                "raw": "with ",
                "type": "text",
                "value": "with ",
              },
              Object {
                "raw": "**bold**",
                "tokens": Array [
                  Object {
                    "raw": "bold",
                    "type": "text",
                    "value": "bold",
                  },
                ],
                "type": "bold",
              },
              Object {
                "raw": " text",
                "type": "text",
                "value": " text",
              },
            ],
          },
          "tooltip": undefined,
        },
        "type": "link",
      },
      Object {
        "raw": " lets see",
        "type": "text",
        "value": " lets see",
      },
    ],
    "type": "paragraph",
    "value": "a link [with **bold** text](https://seeme) lets see",
  },
]
`;

exports[`paragraph should be deep tokenized: a paragraph of <u>words</u> \`first code\` normal text here \`code body\` *first italics* here me crying *italic body* here me crying **first bolds** some normal again **bold body** [Kiran Parajuli](https://kiranparajuli.com.np) ~~strikes body~~ here some 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "a paragraph of <u>words</u> \`first code\` normal text here \`code body\` *first italics* here me crying *italic body* here me crying **first bolds** some normal again **bold body** [Kiran Parajuli](https://kiranparajuli.com.np) ~~strikes body~~ here some",
    "tokens": Array [
      Object {
        "raw": "a paragraph of ",
        "type": "text",
        "value": "a paragraph of ",
      },
      Object {
        "raw": "<u>",
        "tokens": Object {
          "attributes": undefined,
          "isEndTag": false,
          "tag": "u",
        },
        "type": "html",
      },
      Object {
        "raw": "words",
        "type": "text",
        "value": "words",
      },
      Object {
        "raw": "</u>",
        "tokens": Object {
          "attributes": undefined,
          "isEndTag": true,
          "tag": "u",
        },
        "type": "html",
      },
      Object {
        "raw": " ",
        "type": "text",
        "value": " ",
      },
      Object {
        "raw": "\`first code\`",
        "type": "code",
        "value": "first code",
      },
      Object {
        "raw": " normal text here ",
        "type": "text",
        "value": " normal text here ",
      },
      Object {
        "raw": "\`code body\`",
        "type": "code",
        "value": "code body",
      },
      Object {
        "raw": " ",
        "type": "text",
        "value": " ",
      },
      Object {
        "raw": "*first italics*",
        "tokens": Array [
          Object {
            "raw": "first italics",
            "type": "text",
            "value": "first italics",
          },
        ],
        "type": "italic",
      },
      Object {
        "raw": " here me crying ",
        "type": "text",
        "value": " here me crying ",
      },
      Object {
        "raw": "*italic body*",
        "tokens": Array [
          Object {
            "raw": "italic body",
            "type": "text",
            "value": "italic body",
          },
        ],
        "type": "italic",
      },
      Object {
        "raw": " here me crying ",
        "type": "text",
        "value": " here me crying ",
      },
      Object {
        "raw": "**first bolds**",
        "tokens": Array [
          Object {
            "raw": "first bolds",
            "type": "text",
            "value": "first bolds",
          },
        ],
        "type": "bold",
      },
      Object {
        "raw": " some normal again ",
        "type": "text",
        "value": " some normal again ",
      },
      Object {
        "raw": "**bold body**",
        "tokens": Array [
          Object {
            "raw": "bold body",
            "type": "text",
            "value": "bold body",
          },
        ],
        "type": "bold",
      },
      Object {
        "raw": " ",
        "type": "text",
        "value": " ",
      },
      Object {
        "raw": "[Kiran Parajuli](https://kiranparajuli.com.np)",
        "tokens": Object {
          "href": "https://kiranparajuli.com.np",
          "title": Object {
            "raw": "Kiran Parajuli",
            "tokens": Array [
              Object {
                "raw": "Kiran Parajuli",
                "type": "text",
                "value": "Kiran Parajuli",
              },
            ],
          },
          "tooltip": undefined,
        },
        "type": "link",
      },
      Object {
        "raw": " ",
        "type": "text",
        "value": " ",
      },
      Object {
        "raw": "~~strikes body~~",
        "tokens": Array [
          Object {
            "raw": "strikes body",
            "type": "text",
            "value": "strikes body",
          },
        ],
        "type": "strike-through",
      },
      Object {
        "raw": " here some",
        "type": "text",
        "value": " here some",
      },
    ],
    "type": "paragraph",
    "value": "a paragraph of <u>words</u> \`first code\` normal text here \`code body\` *first italics* here me crying *italic body* here me crying **first bolds** some normal again **bold body** [Kiran Parajuli](https://kiranparajuli.com.np) ~~strikes body~~ here some",
  },
]
`;

exports[`paragraph should be deep tokenized: an ***italics*** text 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "an ***italics*** text",
    "tokens": Array [
      Object {
        "raw": "an ",
        "type": "text",
        "value": "an ",
      },
      Object {
        "raw": "***italics***",
        "tokens": Array [
          Object {
            "raw": "italics",
            "type": "text",
            "value": "italics",
          },
        ],
        "type": "italic",
      },
      Object {
        "raw": " text",
        "type": "text",
        "value": " text",
      },
    ],
    "type": "paragraph",
    "value": "an ***italics*** text",
  },
]
`;

exports[`paragraph should be deep tokenized: an *italics and **bold** text* here 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "an *italics and **bold** text* here",
    "tokens": Array [
      Object {
        "raw": "an ",
        "type": "text",
        "value": "an ",
      },
      Object {
        "raw": "*italics and **bold** text*",
        "tokens": Array [
          Object {
            "raw": "italics and ",
            "type": "text",
            "value": "italics and ",
          },
          Object {
            "raw": "**bold**",
            "tokens": Array [
              Object {
                "raw": "bold",
                "type": "text",
                "value": "bold",
              },
            ],
            "type": "bold",
          },
          Object {
            "raw": " text",
            "type": "text",
            "value": " text",
          },
        ],
        "type": "italic",
      },
      Object {
        "raw": " here",
        "type": "text",
        "value": " here",
      },
    ],
    "type": "paragraph",
    "value": "an *italics and **bold** text* here",
  },
]
`;

exports[`paragraph should be deep tokenized: an *italics with\\* asterisk* inside 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "an *italics with\\\\* asterisk* inside",
    "tokens": Array [
      Object {
        "raw": "an ",
        "type": "text",
        "value": "an ",
      },
      Object {
        "raw": "*italics with\\\\* asterisk*",
        "tokens": Array [
          Object {
            "raw": "italics with\\\\* asterisk",
            "type": "text",
            "value": "italics with\\\\* asterisk",
          },
        ],
        "type": "italic",
      },
      Object {
        "raw": " inside",
        "type": "text",
        "value": " inside",
      },
    ],
    "type": "paragraph",
    "value": "an *italics with\\\\* asterisk* inside",
  },
]
`;

exports[`paragraph should be deep tokenized: an *italics* text 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "an *italics* text",
    "tokens": Array [
      Object {
        "raw": "an ",
        "type": "text",
        "value": "an ",
      },
      Object {
        "raw": "*italics*",
        "tokens": Array [
          Object {
            "raw": "italics",
            "type": "text",
            "value": "italics",
          },
        ],
        "type": "italic",
      },
      Object {
        "raw": " text",
        "type": "text",
        "value": " text",
      },
    ],
    "type": "paragraph",
    "value": "an *italics* text",
  },
]
`;

exports[`paragraph should be deep tokenized: an empty [link] reference is here 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "an empty [link] reference is here",
    "tokens": Array [
      Object {
        "raw": "an empty [link] reference is here",
        "type": "text",
        "value": "an empty [link] reference is here",
      },
    ],
    "type": "paragraph",
    "value": "an empty [link] reference is here",
  },
]
`;

exports[`paragraph should be deep tokenized: beautiful ![image](link 'one' 50 60) is here now. 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "beautiful ![image](link 'one' 50 60) is here now.",
    "tokens": Array [
      Object {
        "raw": "beautiful ",
        "type": "text",
        "value": "beautiful ",
      },
      Object {
        "raw": "![image](link 'one' 50 60)",
        "tokens": Object {
          "alt": "image",
          "height": "60",
          "href": "link",
          "title": "one",
          "width": "50",
        },
        "type": "image",
      },
      Object {
        "raw": " is here now.",
        "type": "text",
        "value": " is here now.",
      },
    ],
    "type": "paragraph",
    "value": "beautiful ![image](link 'one' 50 60) is here now.",
  },
]
`;

exports[`paragraph should be deep tokenized: beautiful ![image](link 'one' 50) is here now. 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "beautiful ![image](link 'one' 50) is here now.",
    "tokens": Array [
      Object {
        "raw": "beautiful ",
        "type": "text",
        "value": "beautiful ",
      },
      Object {
        "raw": "![image](link 'one' 50)",
        "tokens": Object {
          "alt": "image",
          "height": undefined,
          "href": "link",
          "title": "one",
          "width": "50",
        },
        "type": "image",
      },
      Object {
        "raw": " is here now.",
        "type": "text",
        "value": " is here now.",
      },
    ],
    "type": "paragraph",
    "value": "beautiful ![image](link 'one' 50) is here now.",
  },
]
`;

exports[`paragraph should be deep tokenized: beautiful ![image](link 'one') is here now. 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "beautiful ![image](link 'one') is here now.",
    "tokens": Array [
      Object {
        "raw": "beautiful ",
        "type": "text",
        "value": "beautiful ",
      },
      Object {
        "raw": "![image](link 'one')",
        "tokens": Object {
          "alt": "image",
          "height": undefined,
          "href": "link",
          "title": "one",
          "width": undefined,
        },
        "type": "image",
      },
      Object {
        "raw": " is here now.",
        "type": "text",
        "value": " is here now.",
      },
    ],
    "type": "paragraph",
    "value": "beautiful ![image](link 'one') is here now.",
  },
]
`;

exports[`paragraph should be deep tokenized: beautiful ![image](link) is here now. 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "beautiful ![image](link) is here now.",
    "tokens": Array [
      Object {
        "raw": "beautiful ",
        "type": "text",
        "value": "beautiful ",
      },
      Object {
        "raw": "![image](link)",
        "tokens": Object {
          "alt": "image",
          "height": undefined,
          "href": "link",
          "title": undefined,
          "width": undefined,
        },
        "type": "image",
      },
      Object {
        "raw": " is here now.",
        "type": "text",
        "value": " is here now.",
      },
    ],
    "type": "paragraph",
    "value": "beautiful ![image](link) is here now.",
  },
]
`;

exports[`paragraph should be deep tokenized: but a link [kiran](https://kiran.me 'hero') with tooltip is very amazing 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "but a link [kiran](https://kiran.me 'hero') with tooltip is very amazing",
    "tokens": Array [
      Object {
        "raw": "but a link ",
        "type": "text",
        "value": "but a link ",
      },
      Object {
        "raw": "[kiran](https://kiran.me 'hero')",
        "tokens": Object {
          "href": "https://kiran.me",
          "title": Object {
            "raw": "kiran",
            "tokens": Array [
              Object {
                "raw": "kiran",
                "type": "text",
                "value": "kiran",
              },
            ],
          },
          "tooltip": "hero",
        },
        "type": "link",
      },
      Object {
        "raw": " with tooltip is very amazing",
        "type": "text",
        "value": " with tooltip is very amazing",
      },
    ],
    "type": "paragraph",
    "value": "but a link [kiran](https://kiran.me 'hero') with tooltip is very amazing",
  },
]
`;

exports[`paragraph should be deep tokenized: but will it \`find a **bold *and* italics** inside\` the code 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "but will it \`find a **bold *and* italics** inside\` the code",
    "tokens": Array [
      Object {
        "raw": "but will it ",
        "type": "text",
        "value": "but will it ",
      },
      Object {
        "raw": "\`find a **bold *and* italics** inside\`",
        "type": "code",
        "value": "find a **bold *and* italics** inside",
      },
      Object {
        "raw": " the code",
        "type": "text",
        "value": " the code",
      },
    ],
    "type": "paragraph",
    "value": "but will it \`find a **bold *and* italics** inside\` the code",
  },
]
`;

exports[`paragraph should be deep tokenized: checkout this _cool italics_ here 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "checkout this _cool italics_ here",
    "tokens": Array [
      Object {
        "raw": "checkout this ",
        "type": "text",
        "value": "checkout this ",
      },
      Object {
        "raw": "_cool italics_",
        "tokens": Array [
          Object {
            "raw": "cool italics",
            "type": "text",
            "value": "cool italics",
          },
        ],
        "type": "italic",
      },
      Object {
        "raw": " here",
        "type": "text",
        "value": " here",
      },
    ],
    "type": "paragraph",
    "value": "checkout this _cool italics_ here",
  },
]
`;

exports[`paragraph should be deep tokenized: how are ~~~strikes _in_ the~~~ _wonderland_ 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "how are ~~~strikes _in_ the~~~ _wonderland_",
    "tokens": Array [
      Object {
        "raw": "how are ~",
        "type": "text",
        "value": "how are ~",
      },
      Object {
        "raw": "~~strikes _in_ the~~",
        "tokens": Array [
          Object {
            "raw": "strikes ",
            "type": "text",
            "value": "strikes ",
          },
          Object {
            "raw": "_in_",
            "tokens": Array [
              Object {
                "raw": "in",
                "type": "text",
                "value": "in",
              },
            ],
            "type": "italic",
          },
          Object {
            "raw": " the",
            "type": "text",
            "value": " the",
          },
        ],
        "type": "strike-through",
      },
      Object {
        "raw": "~ ",
        "type": "text",
        "value": "~ ",
      },
      Object {
        "raw": "_wonderland_",
        "tokens": Array [
          Object {
            "raw": "wonderland",
            "type": "text",
            "value": "wonderland",
          },
        ],
        "type": "italic",
      },
    ],
    "type": "paragraph",
    "value": "how are ~~~strikes _in_ the~~~ _wonderland_",
  },
]
`;

exports[`paragraph should be deep tokenized: i ~~~am now~~~ unhappy 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "i ~~~am now~~~ unhappy",
    "tokens": Array [
      Object {
        "raw": "i ~",
        "type": "text",
        "value": "i ~",
      },
      Object {
        "raw": "~~am now~~",
        "tokens": Array [
          Object {
            "raw": "am now",
            "type": "text",
            "value": "am now",
          },
        ],
        "type": "strike-through",
      },
      Object {
        "raw": "~ unhappy",
        "type": "text",
        "value": "~ unhappy",
      },
    ],
    "type": "paragraph",
    "value": "i ~~~am now~~~ unhappy",
  },
]
`;

exports[`paragraph should be deep tokenized: lets check for \`a code\` inside and code \`\`with multiple\`\` ticks 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "lets check for \`a code\` inside and code \`\`with multiple\`\` ticks",
    "tokens": Array [
      Object {
        "raw": "lets check for ",
        "type": "text",
        "value": "lets check for ",
      },
      Object {
        "raw": "\`a code\`",
        "type": "code",
        "value": "a code",
      },
      Object {
        "raw": " inside and code ",
        "type": "text",
        "value": " inside and code ",
      },
      Object {
        "raw": "\`\`with multiple\`\`",
        "type": "code",
        "value": "with multiple",
      },
      Object {
        "raw": " ticks",
        "type": "text",
        "value": " ticks",
      },
    ],
    "type": "paragraph",
    "value": "lets check for \`a code\` inside and code \`\`with multiple\`\` ticks",
  },
]
`;

exports[`paragraph should be deep tokenized: new ~~~strike~~ with beauty 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "new ~~~strike~~ with beauty",
    "tokens": Array [
      Object {
        "raw": "new ~",
        "type": "text",
        "value": "new ~",
      },
      Object {
        "raw": "~~strike~~",
        "tokens": Array [
          Object {
            "raw": "strike",
            "type": "text",
            "value": "strike",
          },
        ],
        "type": "strike-through",
      },
      Object {
        "raw": " with beauty",
        "type": "text",
        "value": " with beauty",
      },
    ],
    "type": "paragraph",
    "value": "new ~~~strike~~ with beauty",
  },
]
`;

exports[`paragraph should be deep tokenized: no \\* mans \\* land 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "no \\\\* mans \\\\* land",
    "tokens": Array [
      Object {
        "raw": "no \\\\* mans \\\\* land",
        "type": "text",
        "value": "no \\\\* mans \\\\* land",
      },
    ],
    "type": "paragraph",
    "value": "no \\\\* mans \\\\* land",
  },
]
`;

exports[`paragraph should be deep tokenized: now **stars _in_ the** wonderland 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "now **stars _in_ the** wonderland",
    "tokens": Array [
      Object {
        "raw": "now ",
        "type": "text",
        "value": "now ",
      },
      Object {
        "raw": "**stars _in_ the**",
        "tokens": Array [
          Object {
            "raw": "stars ",
            "type": "text",
            "value": "stars ",
          },
          Object {
            "raw": "_in_",
            "tokens": Array [
              Object {
                "raw": "in",
                "type": "text",
                "value": "in",
              },
            ],
            "type": "italic",
          },
          Object {
            "raw": " the",
            "type": "text",
            "value": " the",
          },
        ],
        "type": "bold",
      },
      Object {
        "raw": " wonderland",
        "type": "text",
        "value": " wonderland",
      },
    ],
    "type": "paragraph",
    "value": "now **stars _in_ the** wonderland",
  },
]
`;

exports[`paragraph should be deep tokenized: now with __underlined text__ within some ___underlined_text___ 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "now with __underlined text__ within some ___underlined_text___",
    "tokens": Array [
      Object {
        "raw": "now with ",
        "type": "text",
        "value": "now with ",
      },
      Object {
        "raw": "__underlined text__",
        "tokens": Array [
          Object {
            "raw": "underlined text",
            "type": "text",
            "value": "underlined text",
          },
        ],
        "type": "bold",
      },
      Object {
        "raw": " within some ",
        "type": "text",
        "value": " within some ",
      },
      Object {
        "raw": "___underlined_text___",
        "tokens": Array [
          Object {
            "raw": "underlined_text",
            "type": "text",
            "value": "underlined_text",
          },
        ],
        "type": "italic",
      },
    ],
    "type": "paragraph",
    "value": "now with __underlined text__ within some ___underlined_text___",
  },
]
`;

exports[`paragraph should be deep tokenized: pool of a ~~~~~~~~strike~~~~~~~ 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "pool of a ~~~~~~~~strike~~~~~~~",
    "tokens": Array [
      Object {
        "raw": "pool of a ~~",
        "type": "text",
        "value": "pool of a ~~",
      },
      Object {
        "raw": "~~~~~~strike~~~~~~",
        "tokens": Array [
          Object {
            "raw": "strike",
            "type": "text",
            "value": "strike",
          },
        ],
        "type": "strike-through",
      },
      Object {
        "raw": "~",
        "type": "text",
        "value": "~",
      },
    ],
    "type": "paragraph",
    "value": "pool of a ~~~~~~~~strike~~~~~~~",
  },
]
`;

exports[`paragraph should be deep tokenized: some normal and **bold with * gem** but pure *italics* is alos there baby now ~~coming~~hola amigos~~strike~~ wooo lala what about blazing *********here baby ~~~~~~~~~baby \`baby\`\`\` 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "some normal and **bold with * gem** but pure *italics* is alos there baby now ~~coming~~hola amigos~~strike~~ wooo lala what about blazing *********here baby ~~~~~~~~~baby \`baby\`\`\`",
    "tokens": Array [
      Object {
        "raw": "some normal and ",
        "type": "text",
        "value": "some normal and ",
      },
      Object {
        "raw": "**bold with * gem**",
        "tokens": Array [
          Object {
            "raw": "bold with * gem",
            "type": "text",
            "value": "bold with * gem",
          },
        ],
        "type": "bold",
      },
      Object {
        "raw": " but pure ",
        "type": "text",
        "value": " but pure ",
      },
      Object {
        "raw": "*italics*",
        "tokens": Array [
          Object {
            "raw": "italics",
            "type": "text",
            "value": "italics",
          },
        ],
        "type": "italic",
      },
      Object {
        "raw": " is alos there baby now ",
        "type": "text",
        "value": " is alos there baby now ",
      },
      Object {
        "raw": "~~coming~~",
        "tokens": Array [
          Object {
            "raw": "coming",
            "type": "text",
            "value": "coming",
          },
        ],
        "type": "strike-through",
      },
      Object {
        "raw": "hola amigos",
        "type": "text",
        "value": "hola amigos",
      },
      Object {
        "raw": "~~strike~~",
        "tokens": Array [
          Object {
            "raw": "strike",
            "type": "text",
            "value": "strike",
          },
        ],
        "type": "strike-through",
      },
      Object {
        "raw": " wooo lala what about blazing *********here baby ~~~~~~~~~baby \`baby\`\`\`",
        "type": "text",
        "value": " wooo lala what about blazing *********here baby ~~~~~~~~~baby \`baby\`\`\`",
      },
    ],
    "type": "paragraph",
    "value": "some normal and **bold with * gem** but pure *italics* is alos there baby now ~~coming~~hola amigos~~strike~~ wooo lala what about blazing *********here baby ~~~~~~~~~baby \`baby\`\`\`",
  },
]
`;

exports[`paragraph should be separated with other tokens 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "abc",
    "tokens": Array [
      Object {
        "raw": "abc",
        "type": "text",
        "value": "abc",
      },
    ],
    "type": "paragraph",
    "value": "abc",
  },
  Object {
    "indent": 0,
    "level": 1,
    "raw": "# one",
    "setext": false,
    "tokens": Array [
      Object {
        "raw": "one",
        "type": "text",
        "value": "one",
      },
    ],
    "type": "heading",
    "value": "one",
  },
  Object {
    "indent": 0,
    "raw": "def",
    "tokens": Array [
      Object {
        "raw": "def",
        "type": "text",
        "value": "def",
      },
    ],
    "type": "paragraph",
    "value": "def",
  },
]
`;

exports[`paragraph should detect html in the paragraph 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "this is a link <a href='https://google.com'>google</a> here",
    "tokens": Array [
      Object {
        "raw": "this is a link ",
        "type": "text",
        "value": "this is a link ",
      },
      Object {
        "raw": "<a href='https://google.com'>",
        "tokens": Object {
          "attributes": "href='https://google.com'",
          "isEndTag": false,
          "tag": "a",
        },
        "type": "html",
      },
      Object {
        "raw": "google",
        "type": "text",
        "value": "google",
      },
      Object {
        "raw": "</a>",
        "tokens": Object {
          "attributes": undefined,
          "isEndTag": true,
          "tag": "a",
        },
        "type": "html",
      },
      Object {
        "raw": " here",
        "type": "text",
        "value": " here",
      },
    ],
    "type": "paragraph",
    "value": "this is a link <a href='https://google.com'>google</a> here",
  },
  Object {
    "type": "new-line",
  },
  Object {
    "indent": 0,
    "raw": "this is a <u>underlined</u> text here",
    "tokens": Array [
      Object {
        "raw": "this is a ",
        "type": "text",
        "value": "this is a ",
      },
      Object {
        "raw": "<u>",
        "tokens": Object {
          "attributes": undefined,
          "isEndTag": false,
          "tag": "u",
        },
        "type": "html",
      },
      Object {
        "raw": "underlined",
        "type": "text",
        "value": "underlined",
      },
      Object {
        "raw": "</u>",
        "tokens": Object {
          "attributes": undefined,
          "isEndTag": true,
          "tag": "u",
        },
        "type": "html",
      },
      Object {
        "raw": " text here",
        "type": "text",
        "value": " text here",
      },
    ],
    "type": "paragraph",
    "value": "this is a <u>underlined</u> text here",
  },
  Object {
    "type": "new-line",
  },
]
`;

exports[`paragraph should ignore the escaped special characters 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "this is \\\\[google] link",
    "tokens": Array [
      Object {
        "raw": "this is \\\\[google] link",
        "type": "text",
        "value": "this is \\\\[google] link",
      },
    ],
    "type": "paragraph",
    "value": "this is \\\\[google] link",
  },
  Object {
    "type": "new-line",
  },
  Object {
    "indent": 0,
    "raw": "this is a normal \\\\* asterisk \\\\* here again",
    "tokens": Array [
      Object {
        "raw": "this is a normal \\\\* asterisk \\\\* here again",
        "type": "text",
        "value": "this is a normal \\\\* asterisk \\\\* here again",
      },
    ],
    "type": "paragraph",
    "value": "this is a normal \\\\* asterisk \\\\* here again",
  },
]
`;

exports[`paragraph should merge consecutive paragraph not separated by other tokens 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "abc \`def\` *ghi
jkl* mno **pqr*** stu",
    "tokens": Array [
      Object {
        "raw": "abc ",
        "type": "text",
        "value": "abc ",
      },
      Object {
        "raw": "\`def\`",
        "type": "code",
        "value": "def",
      },
      Object {
        "raw": " ",
        "type": "text",
        "value": " ",
      },
      Object {
        "raw": "*ghi jkl*",
        "tokens": Array [
          Object {
            "raw": "ghi jkl",
            "type": "text",
            "value": "ghi jkl",
          },
        ],
        "type": "italic",
      },
      Object {
        "raw": " mno ",
        "type": "text",
        "value": " mno ",
      },
      Object {
        "raw": "**pqr**",
        "tokens": Array [
          Object {
            "raw": "pqr",
            "type": "text",
            "value": "pqr",
          },
        ],
        "type": "bold",
      },
      Object {
        "raw": "* stu",
        "type": "text",
        "value": "* stu",
      },
    ],
    "type": "paragraph",
    "value": "abc \`def\` *ghi jkl* mno **pqr*** stu",
  },
]
`;
